--- a/src/components/search-visualizer/search-visualizer.css
+++ b/src/components/search-visualizer/search-visualizer.css
@@ -2,16 +2,16 @@
   display: grid;
   grid-template-rows: repeat(100, 1fr);
   grid-column-gap: 5px;
-  padding: 5%;
+  padding: 10px;
 }
 
 [class*='bar'] {
   grid-row-start: 1;
   grid-row-end: 101;
-  border-radius: 5px 5px 0 0;
+  border-radius: 5px 5px 5px 5px;
   padding-top: 7px;
   font-family: sans-serif;
-  font-weight: 700;
+  font-weight: 100;
   display: inline-block;
   color: transparent;
   transition: background-color 0.5s ease;
