--- a/src/components/search-visualizer/search-visualizer.css
+++ b/src/components/search-visualizer/search-visualizer.css
@@ -16,3 +16,12 @@
   color: transparent;
   transition: background-color 0.5s ease;
 }
+
+.tooltip {
+  visibility: hidden;
+  position: absolute;
+}
+.has-tooltip:hover .tooltip {
+  visibility: visible;
+  z-index: 100;
+}
